# list-sorting-with-transformer

./: .gitignore  README.md  pyproject.toml
artifacts/alphabet_alternating_seed7/: metrics.json
artifacts/lstm_alphabet_seed7/: metrics.json
artifacts/lstm_numbers_seed7/: metrics.json
artifacts/numbers_alternating_seed7/: metrics.json
artifacts/pointer_next_position_ablation/: README.md  summary.json
artifacts/pointer_next_position_ablation/alternating/: eval_2_40.json  eval_long.json  metrics.json
artifacts/pointer_next_position_ablation/alternating_value_rope/: eval_boundary.json  eval_long.json  (+1 more)
artifacts/pointer_pair_from_value_gn0_2000_seed7/: eval_high_lengths_to_1000.json  eval_to_1000.json  metrics.json
artifacts/pointer_position_pointer_ce_curriculum_noise_constant_lr_seed7/: metrics.json
artifacts/pointer_position_pointer_ce_curriculum_noise_seed7/: metrics.json
artifacts/pointer_position_random_offset_mse_seed7/: metrics.json
artifacts/pointer_position_random_offset_pointer_ce_seed7/: metrics.json
artifacts/pointer_position_sinusoidal_mse_seed7/: metrics.json
artifacts/pointer_quicksort_no_tool_numbers_seed7_accum2/: metrics.json
artifacts/pointer_quicksort_numbers_seed7_accum2/: metrics.json
artifacts/pointer_value_nocurr_gn0_10k_seed7/: eval_high_lengths_to_1000.json  eval_to_1000.json  metrics.json
artifacts/quicksort_trace_numbers_seed7_accum2/: metrics.json
docs/: metrics.md
src/list_sorting_transformer/: __init__.py  adjacent_sort.py  compare.py  data.py  evaluate.py  evaluation.py  experiment.py  local_window_sort.py  metrics.py  model.py  plots.py  pointer_position_probe.py  pointer_position_sequence.py  pointer_quicksort.py  pointer_value_from_position.py  positions.py  quicksort.py  recurrent.py  render_adjacent_trace.py  render_pointer_trace.py  tokens.py
tests/: test_adjacent_sort.py  test_evaluate.py  test_experiment_pipeline.py  test_local_window_sort.py  test_metrics.py  test_model.py  test_pointer_position_probe.py  test_pointer_position_sequence.py  test_pointer_quicksort.py  test_pointer_value_from_position.py  test_quicksort_trace.py  test_tokens_and_data.py
(+4 files in other folders)
