[project]
name = "list-sorting-with-transformer"
version = "0.1.0"
description = "A decoder-only Transformer benchmark for sorting digit lists."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
tracking = [
    "wandb>=0.15",
]

[project.scripts]
sort-transformer-train = "list_sorting_transformer.experiment:main"
sort-transformer-eval = "list_sorting_transformer.evaluate:main"
sort-transformer-compare = "list_sorting_transformer.compare:main"
sort-pointer-trace = "list_sorting_transformer.render_pointer_trace:main"
sort-adjacent-trace = "list_sorting_transformer.render_adjacent_trace:main"
sort-pointer-position-probe = "list_sorting_transformer.pointer_position_probe:main"
sort-pointer-position-sequence = "list_sorting_transformer.pointer_position_sequence:main"
sort-pointer-value-from-position = "list_sorting_transformer.pointer_value_from_position:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
